# ovelha

./: Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  partial-results.json  server.rb  worker.rb
app/: handler.rb  payment_job.rb  payment_worker.rb  store.rb
payment-processor/: docker-compose.yml
payment-processor/scripts/: get-health-check.sh  get-summary.sh  post-payments.sh  post-purge-payments.sh  put-failure-default.sh  put-failure-fallback.sh
rinha-test/: rinha.js
scripts/: run-local-test.sh
src/: main.rs  queue.rs  redis_pool.rs  request.rs  router.rs  store.rs  worker.rs
