[package]
name = "ovelha"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
serde_json = "1.0"
redis = "0.27"
regex = "1.10"
chrono = "0.4"
ureq = "2.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
